Wed Jul 12 02:18:29 2000  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: copy the language list we get out of gnome-i18n
	  before we reverse it as that is an internal list and modifying it
	  would is bad juju.  I bet this solves some of the i18n bugs I've
	  seen.

2000-06-29  Jacob Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): check to
	see that ->location is non-NULL so we don't crash on solaris

2000-06-15  Jody Goldberg <jgoldberg@home.com>

	* gnome-score.c (print_ascore) : setlocale returns a static buffer.
	  Copy it to safety.  Set the locale AFTER storing the current
	  setting.
	(log_score) : Ditto.
	(gnome_score_get_notable) : Ditto.

	* gnome-config.c (_gnome_config_get_float_with_default): Ditto.
	(_gnome_config_set_float) : Ditto.

2000-05-27  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Invoke setsid()
	before execing the child process, as some applications terminate
	by doing kill (0, SIGTERM) (mgp), so when we launch them from the
	file manager they get the SIGTERM Message as well

Fri May 26 12:24:02 2000  George Lebl <jirka@5z.com>

	* gnome-score.c: Applied patch from Dennis Bjorklund
	  <dennisb@cs.chalmers.se> to fix another unprotected atof with
	  setting locale to "C" and then back.

2000-05-21  Jacob Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): use -m
	for xalf, so that it works with my netscape 3

Fri May 19 22:33:09 2000  George Lebl <jirka@5z.com>

	* gnome-url.c: use poptParseArgvString to parse the handler and
	  use gnome_exec_async instead of a shell.  No more evil URLs.

Fri May 19 00:01:36 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: add #include <ctype.h> for tolower

2000-05-18  Miguel de Icaza  <miguel@gnu.org>

	* gnome-config.c (gnome_config_iterator_next): Implement as
	documented.  

2000-05-09  Jacob Berkman  <jacob@helixcode.com>
