@@ -1,3 +1,11 @@
+2000-07-11  Miguel de Icaza  <miguel@gnu.org>
+
+	* gnome-sound.c (gnome_sound_init): Store the esound hostname
+	here.
+	(gnome_sound_play): Use the use_sound routine here.
+	(gnome_sound_sample_load): ditto.
+	(use_sound): Delayed initialization of sound.
+
 Wed Jul 12 02:18:29 2000  George Lebl <jirka@5z.com>
 
 	* gnome-mime-info.c: copy the language list we get out of gnome-i18n
